apps/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:latest
          ports:
            - containerPort: 53
              protocol: UDP
            - containerPort: 53
              protocol: TCP
            - containerPort: 80
          volumeMounts:
            - name: etc-pihole
              mountPath: /etc/pihole
            - name: etc-dnsmasq
              mountPath: /etc/dnsmasq.d
            - name: custom-dns
              mountPath: /etc/pihole/custom.list
              subPath: custom.list
      volumes:
        - name: etc-pihole
          hostPath:
            path: /home/server/pihole/etc-pihole
        - name: etc-dnsmasq
          hostPath:
            path: /home/server/pihole/etc-dnsmasq.d
        - name: custom-dns
          configMap:
            name: pihole-custom-dns
