apps/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
spec:
  selector:
    app: pihole
  ports:
    - name: web
      port: 80
      targetPort: 80
    - name: pihole-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: pihole-udp
      port: 53
      targetPort: 53
      protocol: UDP
