apps/pihole/ingressroutetcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: pihole-dns-tcp
spec:
  entryPoints:
    - pihole-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: pihole
          port: 53
      middlewares:
        - name: tcp-vpn-only
